[tool.poetry]
name = "vk-parser"
version = "0.1.0"
description = ""
authors = ["skq <nenado1790@gmail.com>"]
readme = "README.md"
packages = [{include = "vk_parser"}]

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^20.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
